// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should render component with disabled state 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  user-select: none;
}

.c0>* {
  margin-top: 16px;
}

.c1 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: not-allowed;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

fieldset[data-dimension='s'] .c1.c1 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1.c1 {
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  cursor: not-allowed;
}

.c2 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c2 ::-ms-check {
  display: none;
}

.c2:disabled {
  cursor: not-allowed;
}

.c2:disabled:not(:checked)+div>span {
  border-color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  background-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c2:disabled:checked+div>span {
  border-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
}

.c2:disabled:checked+div>span *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c2:disabled:checked+div>span>svg {
  visibility: visible;
}

.c2:checked:not(:disabled)+div>span {
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c2:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c2:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c2:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c2:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled)+div>div {
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c3 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c3 {
  width: 20px;
  height: 20px;
}

.c4 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 32px;
  height: 32px;
}

.c5 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: var(--admiral-border-radius-Small, 4px);
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #717681);
}

fieldset[data-dimension='s'] .c5.c5 {
  width: 16px;
  height: 16px;
}

.c5 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

fieldset:disabled .c5.c5 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c6 {
  visibility: hidden;
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

fieldset:disabled .c7.c7 {
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<body>
    <div>
      <div
        class="c0"
        disabled=""
      >
        <label
          class="c1"
          data-field-id="checkboxFieldMoscow"
          disabled=""
        >
          <input
            class="c2"
            disabled=""
            id="checkboxFieldMoscow"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
              disabled=""
            >
              <div
                aria-hidden="true"
                class="c6"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
            disabled=""
          >
            Москва
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxFieldVoronezh"
          disabled=""
        >
          <input
            class="c2"
            disabled=""
            id="checkboxFieldVoronezh"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
              disabled=""
            >
              <div
                aria-hidden="true"
                class="c6"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
            disabled=""
          >
            Воронеж
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxFieldSamara"
          disabled=""
        >
          <input
            class="c2"
            disabled=""
            id="checkboxFieldSamara"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
              disabled=""
            >
              <div
                aria-hidden="true"
                class="c6"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
            disabled=""
          >
            Самара
          </div>
        </label>
      </div>
    </div>
  </body>,
  "container": .c0 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  user-select: none;
}

.c0>* {
  margin-top: 16px;
}

.c1 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: not-allowed;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

fieldset[data-dimension='s'] .c1.c1 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1.c1 {
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  cursor: not-allowed;
}

.c2 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c2 ::-ms-check {
  display: none;
}

.c2:disabled {
  cursor: not-allowed;
}

.c2:disabled:not(:checked)+div>span {
  border-color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  background-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c2:disabled:checked+div>span {
  border-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
}

.c2:disabled:checked+div>span *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c2:disabled:checked+div>span>svg {
  visibility: visible;
}

.c2:checked:not(:disabled)+div>span {
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c2:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c2:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c2:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c2:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled)+div>div {
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c3 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c3 {
  width: 20px;
  height: 20px;
}

.c4 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 32px;
  height: 32px;
}

.c5 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: var(--admiral-border-radius-Small, 4px);
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #717681);
}

fieldset[data-dimension='s'] .c5.c5 {
  width: 16px;
  height: 16px;
}

.c5 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

fieldset:disabled .c5.c5 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c6 {
  visibility: hidden;
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

fieldset:disabled .c7.c7 {
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
    <div
      class="c0"
      disabled=""
    >
      <label
        class="c1"
        data-field-id="checkboxFieldMoscow"
        disabled=""
      >
        <input
          class="c2"
          disabled=""
          id="checkboxFieldMoscow"
          type="checkbox"
        />
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <span
            class="c5"
            disabled=""
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c7"
          disabled=""
        >
          Москва
        </div>
      </label>
      <label
        class="c1"
        data-field-id="checkboxFieldVoronezh"
        disabled=""
      >
        <input
          class="c2"
          disabled=""
          id="checkboxFieldVoronezh"
          type="checkbox"
        />
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <span
            class="c5"
            disabled=""
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c7"
          disabled=""
        >
          Воронеж
        </div>
      </label>
      <label
        class="c1"
        data-field-id="checkboxFieldSamara"
        disabled=""
      >
        <input
          class="c2"
          disabled=""
          id="checkboxFieldSamara"
          type="checkbox"
        />
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <span
            class="c5"
            disabled=""
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c7"
          disabled=""
        >
          Самара
        </div>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxGroup should render component with label 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
  user-select: none;
}

.c0>* {
  margin-top: 16px;
}

.c1 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
}

fieldset[data-dimension='s'] .c1.c1 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1.c1 {
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  cursor: not-allowed;
}

.c2 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c2 ::-ms-check {
  display: none;
}

.c2:disabled {
  cursor: not-allowed;
}

.c2:disabled:not(:checked)+div>span {
  border-color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  background-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c2:disabled:checked+div>span {
  border-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
}

.c2:disabled:checked+div>span *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c2:disabled:checked+div>span>svg {
  visibility: visible;
}

.c2:checked:not(:disabled)+div>span {
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c2:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c2:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c2:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c2:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled)+div>div {
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c3 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c3 {
  width: 20px;
  height: 20px;
}

.c4 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 32px;
  height: 32px;
}

.c5 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: var(--admiral-border-radius-Small, 4px);
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #717681);
}

fieldset[data-dimension='s'] .c5.c5 {
  width: 16px;
  height: 16px;
}

.c5 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

fieldset:disabled .c5.c5 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c6 {
  visibility: hidden;
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
}

fieldset:disabled .c7.c7 {
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<body>
    <div>
      <div
        class="c0"
      >
        Выберите города
        <label
          class="c1"
          data-field-id="checkboxFieldMoscow"
        >
          <input
            class="c2"
            id="checkboxFieldMoscow"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c6"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Москва
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxFieldVoronezh"
        >
          <input
            class="c2"
            id="checkboxFieldVoronezh"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c6"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Воронеж
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxFieldSamara"
        >
          <input
            class="c2"
            id="checkboxFieldSamara"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c6"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Самара
          </div>
        </label>
      </div>
    </div>
  </body>,
  "container": .c0 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
  user-select: none;
}

.c0>* {
  margin-top: 16px;
}

.c1 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
}

fieldset[data-dimension='s'] .c1.c1 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1.c1 {
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  cursor: not-allowed;
}

.c2 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c2 ::-ms-check {
  display: none;
}

.c2:disabled {
  cursor: not-allowed;
}

.c2:disabled:not(:checked)+div>span {
  border-color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  background-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c2:disabled:checked+div>span {
  border-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
}

.c2:disabled:checked+div>span *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c2:disabled:checked+div>span>svg {
  visibility: visible;
}

.c2:checked:not(:disabled)+div>span {
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c2:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c2:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c2:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c2:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled)+div>div {
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c3 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c3 {
  width: 20px;
  height: 20px;
}

.c4 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 32px;
  height: 32px;
}

.c5 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: var(--admiral-border-radius-Small, 4px);
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #717681);
}

fieldset[data-dimension='s'] .c5.c5 {
  width: 16px;
  height: 16px;
}

.c5 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

fieldset:disabled .c5.c5 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c6 {
  visibility: hidden;
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
}

fieldset:disabled .c7.c7 {
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
    <div
      class="c0"
    >
      Выберите города
      <label
        class="c1"
        data-field-id="checkboxFieldMoscow"
      >
        <input
          class="c2"
          id="checkboxFieldMoscow"
          type="checkbox"
        />
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <span
            class="c5"
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c7"
        >
          Москва
        </div>
      </label>
      <label
        class="c1"
        data-field-id="checkboxFieldVoronezh"
      >
        <input
          class="c2"
          id="checkboxFieldVoronezh"
          type="checkbox"
        />
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <span
            class="c5"
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c7"
        >
          Воронеж
        </div>
      </label>
      <label
        class="c1"
        data-field-id="checkboxFieldSamara"
      >
        <input
          class="c2"
          id="checkboxFieldSamara"
          type="checkbox"
        />
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <span
            class="c5"
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c7"
        >
          Самара
        </div>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxGroup should render component with small dimension 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 14px;
  line-height: 16px;
  font-weight: normal;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
  user-select: none;
}

.c0>* {
  margin-top: 12px;
}

.c1 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
}

fieldset[data-dimension='s'] .c1.c1 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1.c1 {
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  cursor: not-allowed;
}

.c2 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c2 ::-ms-check {
  display: none;
}

.c2:disabled {
  cursor: not-allowed;
}

.c2:disabled:not(:checked)+div>span {
  border-color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  background-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c2:disabled:checked+div>span {
  border-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
}

.c2:disabled:checked+div>span *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c2:disabled:checked+div>span>svg {
  visibility: visible;
}

.c2:checked:not(:disabled)+div>span {
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c2:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c2:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c2:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c2:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled)+div>div {
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c3 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c3 {
  width: 20px;
  height: 20px;
}

.c4 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 32px;
  height: 32px;
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 32px;
  height: 32px;
}

.c5 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: var(--admiral-border-radius-Small, 4px);
  width: 16px;
  height: 16px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #717681);
}

fieldset[data-dimension='s'] .c5.c5 {
  width: 16px;
  height: 16px;
}

.c5 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

fieldset:disabled .c5.c5 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c6 {
  visibility: hidden;
  width: 16px;
  height: 16px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
}

fieldset:disabled .c7.c7 {
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<body>
    <div>
      <div
        class="c0"
      >
        <label
          class="c1"
          data-field-id="checkboxFieldMoscow"
        >
          <input
            class="c2"
            id="checkboxFieldMoscow"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c6"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Москва
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxFieldVoronezh"
        >
          <input
            class="c2"
            id="checkboxFieldVoronezh"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c6"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Воронеж
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxFieldSamara"
        >
          <input
            class="c2"
            id="checkboxFieldSamara"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c6"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Самара
          </div>
        </label>
      </div>
    </div>
  </body>,
  "container": .c0 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 14px;
  line-height: 16px;
  font-weight: normal;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
  user-select: none;
}

.c0>* {
  margin-top: 12px;
}

.c1 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
}

fieldset[data-dimension='s'] .c1.c1 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1.c1 {
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  cursor: not-allowed;
}

.c2 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c2 ::-ms-check {
  display: none;
}

.c2:disabled {
  cursor: not-allowed;
}

.c2:disabled:not(:checked)+div>span {
  border-color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  background-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c2:disabled:checked+div>span {
  border-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
}

.c2:disabled:checked+div>span *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c2:disabled:checked+div>span>svg {
  visibility: visible;
}

.c2:checked:not(:disabled)+div>span {
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c2:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c2:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c2:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c2:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled)+div>div {
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c3 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c3 {
  width: 20px;
  height: 20px;
}

.c4 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 32px;
  height: 32px;
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 32px;
  height: 32px;
}

.c5 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: var(--admiral-border-radius-Small, 4px);
  width: 16px;
  height: 16px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #717681);
}

fieldset[data-dimension='s'] .c5.c5 {
  width: 16px;
  height: 16px;
}

.c5 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

fieldset:disabled .c5.c5 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c6 {
  visibility: hidden;
  width: 16px;
  height: 16px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
}

fieldset:disabled .c7.c7 {
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
    <div
      class="c0"
    >
      <label
        class="c1"
        data-field-id="checkboxFieldMoscow"
      >
        <input
          class="c2"
          id="checkboxFieldMoscow"
          type="checkbox"
        />
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <span
            class="c5"
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c7"
        >
          Москва
        </div>
      </label>
      <label
        class="c1"
        data-field-id="checkboxFieldVoronezh"
      >
        <input
          class="c2"
          id="checkboxFieldVoronezh"
          type="checkbox"
        />
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <span
            class="c5"
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c7"
        >
          Воронеж
        </div>
      </label>
      <label
        class="c1"
        data-field-id="checkboxFieldSamara"
      >
        <input
          class="c2"
          id="checkboxFieldSamara"
          type="checkbox"
        />
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <span
            class="c5"
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c7"
        >
          Самара
        </div>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxGroup should render components 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
  user-select: none;
}

.c0>* {
  margin-top: 16px;
}

.c1 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
}

fieldset[data-dimension='s'] .c1.c1 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1.c1 {
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  cursor: not-allowed;
}

.c2 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c2 ::-ms-check {
  display: none;
}

.c2:disabled {
  cursor: not-allowed;
}

.c2:disabled:not(:checked)+div>span {
  border-color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  background-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c2:disabled:checked+div>span {
  border-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
}

.c2:disabled:checked+div>span *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c2:disabled:checked+div>span>svg {
  visibility: visible;
}

.c2:checked:not(:disabled)+div>span {
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c2:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c2:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c2:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c2:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled)+div>div {
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c3 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c3 {
  width: 20px;
  height: 20px;
}

.c4 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 32px;
  height: 32px;
}

.c5 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: var(--admiral-border-radius-Small, 4px);
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #717681);
}

fieldset[data-dimension='s'] .c5.c5 {
  width: 16px;
  height: 16px;
}

.c5 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

fieldset:disabled .c5.c5 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c6 {
  visibility: hidden;
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
}

fieldset:disabled .c7.c7 {
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<body>
    <div>
      <div
        class="c0"
      >
        <label
          class="c1"
          data-field-id="checkboxFieldMoscow"
        >
          <input
            class="c2"
            id="checkboxFieldMoscow"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c6"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Москва
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxFieldVoronezh"
        >
          <input
            class="c2"
            id="checkboxFieldVoronezh"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c6"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Воронеж
          </div>
        </label>
        <label
          class="c1"
          data-field-id="checkboxFieldSamara"
        >
          <input
            class="c2"
            id="checkboxFieldSamara"
            type="checkbox"
          />
          <div
            class="c3"
          >
            <div
              class="c4"
            />
            <span
              class="c5"
            >
              <div
                aria-hidden="true"
                class="c6"
                focusable="false"
              />
            </span>
          </div>
          <div
            class="c7"
          >
            Самара
          </div>
        </label>
      </div>
    </div>
  </body>,
  "container": .c0 {
  flex-direction: column;
  display: inline-flex;
  box-sizing: border-box;
  font-size: 16px;
  line-height: 20px;
  font-weight: normal;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
  user-select: none;
}

.c0>* {
  margin-top: 16px;
}

.c1 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
}

fieldset[data-dimension='s'] .c1.c1 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c1.c1 {
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  cursor: not-allowed;
}

.c2 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c2 ::-ms-check {
  display: none;
}

.c2:disabled {
  cursor: not-allowed;
}

.c2:disabled:not(:checked)+div>span {
  border-color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  background-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c2:disabled:checked+div>span {
  border-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
}

.c2:disabled:checked+div>span *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c2:disabled:checked+div>span>svg {
  visibility: visible;
}

.c2:checked:not(:disabled)+div>span {
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c2:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c2:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c2:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c2:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c2:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c2:not(:disabled):active:not(:disabled)+div>div {
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c3 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c3 {
  width: 20px;
  height: 20px;
}

.c4 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 32px;
  height: 32px;
}

.c5 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: var(--admiral-border-radius-Small, 4px);
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #717681);
}

fieldset[data-dimension='s'] .c5.c5 {
  width: 16px;
  height: 16px;
}

.c5 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

fieldset:disabled .c5.c5 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c6 {
  visibility: hidden;
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
}

fieldset:disabled .c7.c7 {
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
    <div
      class="c0"
    >
      <label
        class="c1"
        data-field-id="checkboxFieldMoscow"
      >
        <input
          class="c2"
          id="checkboxFieldMoscow"
          type="checkbox"
        />
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <span
            class="c5"
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c7"
        >
          Москва
        </div>
      </label>
      <label
        class="c1"
        data-field-id="checkboxFieldVoronezh"
      >
        <input
          class="c2"
          id="checkboxFieldVoronezh"
          type="checkbox"
        />
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <span
            class="c5"
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c7"
        >
          Воронеж
        </div>
      </label>
      <label
        class="c1"
        data-field-id="checkboxFieldSamara"
      >
        <input
          class="c2"
          id="checkboxFieldSamara"
          type="checkbox"
        />
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <span
            class="c5"
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c7"
        >
          Самара
        </div>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
